--- a/main.html
+++ b/main.html
@@ -1,16 +1,31 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css">
+  <title>Semantic Navbar and Images</title>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <!-- Semantic Navigation Bar -->
+  <nav>
+    <ul>
+      <li><a href="https://www.example.com/home">Home</a></li>
+      <li><a href="https://www.example.com/about">About us</a></li>
+      <li><a href="https://www.example.com/contact">Contact us</a></li>
+    </ul>
+  </nav>
 
+  <!-- Image Section -->
+  <section>
+    <h2>3 random images</h2>
+
+    <img src="https://picsum.photos/id/123/200/300" alt="Random image">
+    <img src="https://picsum.photos/id/124/200/300" alt="Random image">
+    <img src="https://picsum.photos/id/125/200/300" alt="Random image">
+  </section>
+
+  <script type="text/javascript" src="./script.js"></script>
 </body>
 
 </html>
